--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ h1 {
     white-space: nowrap;
 }
 
-label.ecrs-done {
+label.cs-done {
     text-decoration: line-through;
+}
+
+a {
+    text-decoration: none;
 }
